deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-dep
  labels:
    app: myapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: cimbonda/nodeapp:v1
        ports:
        - containerPort: 8181
          name: http
