fortune-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: fortune-svc

spec:
  selector:
    app: fortune
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: nginx
