lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc

spec:
  ports:
    - port: 80
      targetPort: http
  type: LoadBalancer
  
  selector:
    app: myapp
