nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-np

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8181
      nodePort: 30999
  selector:
    app: myapp
