ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ing

spec: 
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: myapp-np
              servicePort: 80
